2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* Makefile.am: Stray Makefile variables (#558039). Patches from
	dmacks@netspace.org
	* rsvg-base.c:
	* gdk-pixbuf-loader/Makefile.am:
	* gtk-engine/Makefile.am: ditto
	
2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* gtk-engine/svg-rc-style.c: Remove deprecated GLib symbols (#560444).
	Patch by Luis Menina (liberforce@freeside.fr)
	
2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>

	* rsvg-private.h: Use G_STRFUNC as suggested by Christian Persch.

2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>

	* rsvg-private.h: Don't use deprecated glib symbols.

2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-structure.c: Stop crash due to recursive references (#518640).
	Patch by Tom Parker
	* rsvg-private.h: ditto
	* rsvg-base.c: ditto
	* rsvg-cairo-render.c: ditto
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-mask.c: another memory leak (#552919). Found by mclasen.
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-gobject.c: gdmgreeter segfault due to libxml2 API/ABI change
	(#549087). Patch by Tom Parker (palfrey%40tevp.net). Untested against
	libxml2 >= 2.7.0, but DV says "from the distance, that patch seems 
	to do the right thing"
	* rsvg-base.c: ditto

2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-convert.c: background color setting feature in rsvg_convert program
	(#556969). Patch inspired by harobed (stephane%40harobed.org)
	* librsvg.def: Export 1 function necessary for the above
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-convert.c: command-line tools can't handle UTF-8 encoded 
	filenames (#557036, reported by Tim Starling)
	* test-display.c: ditto
	
2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.4.

==================== 2.22.3 ====================

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.22.3
