@@ -79,10 +79,10 @@ librsvginc_HEADERS = 	\
 	librsvg-enum-types.h
 
 INCLUDES =				\
-	$(LIBGSF_CFLAGS)		\
-	$(LIBCROCO_CFLAGS)		\
 	-I$(top_srcdir) 		\
 	-I$(top_builddir) 		\
+	$(LIBGSF_CFLAGS)		\
+	$(LIBCROCO_CFLAGS)		\
 	$(LIBRSVG_CFLAGS) 		\
 	$(GTK_CFLAGS)			\
 	$(GDK_X11_CFLAGS)		\
